--- a/app/src/main/res/layout/contenido.xml
+++ b/app/src/main/res/layout/contenido.xml
@@ -31,7 +31,7 @@
                 tools:srcCompat="@android:drawable/sym_def_app_icon" />
 
             <TextView
-                android:id="@+id/tvNombre"
+                android:id="@+id/tvDireccion"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="TextView"
@@ -52,7 +52,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/imageViewContacto"
-                app:layout_constraintTop_toBottomOf="@+id/tvNombre" />
+                app:layout_constraintTop_toBottomOf="@+id/tvDireccion" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
