--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -37,6 +37,14 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etBuscar"
+        app:layout_constraintTop_toBottomOf="@+id/switchFav"
         tools:layout_editor_absoluteX="134dp" />
+
+    <Switch
+        android:id="@+id/switchFav"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Favoritos"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etBuscar" />
 </androidx.constraintlayout.widget.ConstraintLayout>
